@@ -1,3 +1,7 @@
+2017-10-14 S. Thiell <sthiell@stanford.edu>
+
+	* NodeSet.py: add node wildcard support (ticket #349).
+
 2017-10-02 S. Thiell <sthiell@stanford.edu>
 
 	* 1.8 beta2 (1.7.82) release.
